mp3/vivado_hls.log
@I [LIC-101] Checked out feature [HLS]
@I [HLS-10] Running 'C:/Xilinx/Vivado_HLS/2015.1/bin/unwrapped/win64.o/vivado_hls.exe'
            for user 'Enyu Luo' on host 'enyubootcampwin' (Windows NT_amd64 version 6.2) on Thu Oct 01 17:45:44 -0500 2015
            in directory 'Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3'
@I [HLS-10] Opening project 'Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3/partB'.
@I [HLS-10] Adding design file 'partB/matrixmath.h' to the project
@I [HLS-10] Adding design file 'partB/matrixmath.c' to the project
@I [HLS-10] Adding test bench file 'partB/matrixmath_test.c' to the project
@I [HLS-10] Opening solution 'Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3/partB/solution2_optimized'.
@I [SYN-201] Setting up clock 'default' with a period of 10ns.
@I [LIC-101] Checked out feature [HLS]
@I [HLS-10] Setting target device to 'xc7z020clg484-1'
@I [HLS-10] Analyzing design file 'partB/matrixmath.c' ... 
@E [HLS-70] Compilation errors found:
partB/matrixmath.c:82:10: error: subscripted value is not an array, pointer, or vector
                                        C[i][j] = arrayC[i][j];
                                        ~~~~^~
1 error generated.
Failed checking during preprocessing.
    while executing
"source Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3/partB/solution2_optimized/csynth.tcl"
    invoked from within
"hls::main Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3/partB/solution2_optimized/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
@I [LIC-101] Checked in feature [HLS]
